feat: list credential object stub in getvault request
